# bintester

./: Cargo.toml  README.md  main.rs  run_tests.sh
app/: io.rs  lib.rs  mod.rs
test/: failure_cases.json  success_cases.json
test/failure/: failure_case1.json  failure_case2.json  failure_case3.json
test/success/: success_case1.json  success_case2.json
